# dictionary-app

./: .env.dev  README.md  docker-compose.yml  model.pgerd  package-lock.json  package.json
.github/ISSUE_TEMPLATE/: feature-request.md
backend/: .dockerignore  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile.dev  pyproject.toml  requirements-dev.txt
backend/.hooks/: pre-commit.json
backend/app/: .flake8
backend/app/api/: models.py  urls.py
backend/app/api/html/: swagger.html
backend/app/api/migrations/: 0001_initial.py
backend/app/api/models/: user.py
backend/app/app/: asgi.py  settings.py  urls.py  wsgi.py
backend/app/html/: swagger.html
configs/: pgadmin-servers.json
frontend/: Dockerfile.dev  lint-staged.config.js  package-lock.json  package.json
frontend/.hooks/: pre-commit.json
